infra/kubernetes/vps-safe/nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: operator
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 31080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: operator
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 31000
