infra/kubernetes/vps-safe/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operator
  namespace: operator
$patch: delete
